//
//  HomeModel.swift
//  Moview
//
//  Created by Luis Alejandro Barbosa Lee on 21/04/22.
//  Copyright (c) 2022 Luis Alejandro Barbosa Lee. All rights reserved.

import UIKit

struct HomeModel {

	struct Texts {
        static let emptyCellDescription = "Here you can watch the most popular movies so far, don't forget to be connected to the internet to be able to watch them."
		static let titleLabel = "Get to know the most popular movies, and save the ones you like as favorites"
	}
}
